--- a/configure-client/src/app/app.component.html
+++ b/configure-client/src/app/app.component.html
@@ -1,3 +1,4 @@
 <a routerLink="/login">Login</a>
 <a routerLink="/demoPage">Demo page</a>
+<a routerLink="/dashboardTemplate">Dashboard template</a>
 <router-outlet></router-outlet>
